# rentmate

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  KNOWN_ISSUES.md  LICENSE  MORNING_BRIEFING.md  OVERNIGHT_LOG.md  README.md  RENTMATE_ARCHITECTURE.md  conftest.py  install.sh  main.py  memory_watchdog.py  package.json  pyproject.toml  run.sh  serve.py
.github/workflows/: build-push.yaml  sync-to-hosted.yml  test.yml
agent/: action_policy.py  agent_stream.py  client.py  context.py  dispatch.py  doc_gen_loader.py  doc_gen_runtime.py  document_processor.py  generated_documents.py  invocation.py  litellm_utils.py  llm.py  loop.py  memory_store.py  model_config.py  query_entities.py  registry.py  retrieval.py  runs.py  side_effects.py  streams.py  suggest.py  time.py  tool_docs.py  tracing.py  trajectory.py  uncertainty.py
agent/.context/: index.md
agent/agent_mds/: SOUL.md
agent/policies/: document_handling.md  information_gaps.md  leasing.md  maintenance.md  owner_approval.md  safety.md
agent/tests/: test_add_task_note.py  test_agent_stream.py  test_doc_gen_runtime.py  test_document_tools.py  test_evals.py  test_generated_documents.py  test_invocation.py  test_lease_tools.py  test_list_tasks_tool.py  test_llm_tools.py  test_loop.py  test_memory_isolation.py  test_model_config.py  test_policy_provider.py  test_query_entities.py  test_registry.py  test_remember_about_entity.py  test_retrieval.py  test_runs.py  test_streams.py  test_tool_docs.py  test_tool_has_happened.py  test_tool_public_ids.py  test_tracing.py  test_trajectory.py  test_uncertainty.py
agent/tools/: __init__.py  _common.py  documents.py  entities.py  leases.py  memory.py  messaging.py  onboarding.py  task_review.py  tasks.py  time_tools.py  vendors.py  web_search.py
agents/template/: HEARTBEAT.md  IDENTITY.md  ONBOARDING.md  SOUL.md
automations/: expired_leases.json  expiring_leases.json  incomplete_properties.json  lease_status.json  missing_contact.json  overdue_rent.json  seasonal_gutter_cleaning.json  vacant_units.json
backends/: base.py  chroma_vector.py  gmail.py  litellm_vector.py  local_auth.py  local_storage.py  single_tenant_sms.py  wire.py
chrome/: content.js  manifest.json  popup.html  suggestion.js
db/: audit.py  dsl_runner.py  enums.py  id_utils.py  lib.py  models.py  models_old.py  queries.py  session.py  utils.py  vector_models.py
db/migrations/: env.py
db/models/: __init__.py  account.py  agent_memory.py  agent_run.py  agent_step.py  agent_trace.py  (+13 more)
demo/: personalities.py  responder.py  seed.py  simulator.py
docs/: action-desk-design.md  automation-design.md  autonomy-framework.md  postmark-inbound-setup.md  product.md  property-flow.md  why-fsl.md
evals/: README.md  __main__.py  conftest.py  eval_maintenance_basic.py  eval_maintenance_intake.py  harness.py  llm_utils.py  multi_actor_harness.py  personas.py  replay.py  runner.py  state_snapshots.py  test_adversarial.py  test_batch_operations.py  test_compliance.py  test_coordination.py  test_document_chat_regressions.py  test_document_extraction.py  test_document_suggestions.py  test_e2e_harness_unit.py  test_e2e_late_rent.py  test_e2e_vendor_decline.py  test_edge_cases.py  test_eviction_workflow.py  test_garage_door.py  test_leasing.py  test_maintenance_triage.py  test_move_in_out.py  test_multi_turn.py  test_owner_operations.py  test_rent_collection.py  test_tenant_communication.py  test_vendor_flow.py  vendor_outreach_runner.py
gql/: auth_mutations.py  schema.py  types.py
handlers/: auth.py  automations.py  chat.py  data_portability.py  default_automations.py  deps.py  dev.py  documents.py  email_inbound.py  email_parser.py  heartbeat.py  notifications.py  quo_poller.py  reply_scanner.py  routines.py  scheduler.py  settings.py  streams.py  task_review.py  task_suggestions.py  tenant_invite.py  tenant_portal.py  vendor_invite.py  vendor_portal.py
infra/: backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile
integrations/: base.py  litellm_vector.py  local_storage.py  runtime_config.py  wire.py
llm/: action_policy.py  agent_action.py  agent_data.py  agent_query.py  agent_stream.py  client.py  context.py  dispatch.py  doc_gen_runtime.py  document_processor.py  generated_documents.py  hermes_logging.py  history_filters.py  invocation.py  litellm_utils.py  llm.py  loop.py  memory_store.py  model_config.py  query_entities.py  registry.py  rentmate_policy_provider.py  retrieval.py  runs.py  side_effects.py  streams.py  suggest.py  tool_docs.py  tools.py  tracing.py  trajectory.py  vendor_outreach.py
rentmate/: __init__.py  app.py
scripts/: benchmark_suggestion_actions.py  bootstrap-hosted-sync.sh  check_gql_services_private_usage.py  check_graphql_codegen.py  check_migrations.py  check_migrations.sh  check_services_private_usage.py  dev-compose.sh  export_graphql_schema.py  fix_kwargs.py  fix_lazy_imports.py  lint_kwargs.py  run_doc_gen_service.py  seed_data.py  seed_dummy_data.py  test_doc_gen_container.sh
services/: chat_service.py  document_service.py  email_service.py  extension_service.py  lease_service.py  notification_service.py  number_allocator.py  owner_service.py  portal_auth.py  property_service.py  routine_service.py  settings_service.py  suggestion_service.py  task_service.py  task_suggestions.py  tenant_service.py  vendor_service.py
storage/: __init__.py  blob_store.py
tests/: Dockerfile.test-install  conftest.py  test-install.sh  test_audit.py  test_auth_import_hygiene.py  test_chat_integration.py  test_db_lib.py  test_dev_compose_smoke.py  test_document_extraction.py  test_dsl.py  test_email_inbound.py  test_eval_runner.py  test_evals.py  test_frontend_graphql_queries.py  test_graphql_auth_logging.py  test_graphql_codegen.py  test_graphql_message_meta.py  test_hosted_storage_contract.py  test_registry.py  test_startup.py  test_suggestion_performance.py  test_task_features.py  test_task_vendor_flow.py  test_test_db_isolation.py  test_vendor_invite.py
(+340 files in other folders)
