[tool.poetry]
name = "rentmate"
version = "0.1.0"
description = "Open source property management assistant"
authors = ["RentMate Contributors"]
readme = "README.md"
packages = [{ include = "llm" }]

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.74.8"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
strawberry-graphql = "^0.282.0"
pypdf = "^4.0"
python-multipart = "^0.0.22"
sentence-transformers = "^5.2.3"
chromadb = "^1.0"
pyjwt = "^2.9"
sqlalchemy = "^2.0"
langchain-text-splitters = "^0.3"
hermes-agent = {git = "https://github.com/nousresearch/hermes-agent.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
alembic = "^1.17.1"
testcontainers = {extras = ["postgres"], version = "^4.14.2"}
psycopg2-binary = "^2.9"
ruff = "^0.15.9"

[tool.pytest.ini_options]
addopts = "-m 'not eval'"
markers = [
  "eval: LLM-judge eval cases (run with -m eval)",
  "postgres: integration tests that require Docker + a running Postgres container",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "db/migrations/",
    "www/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import ordering & consolidation)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (used in compact patterns)
    "E741",   # ambiguous variable names
    "F401",   # unused imports (too noisy during development)
    "F821",   # undefined name (false positives from conditional imports)
]

[tool.ruff.lint.per-file-ignores]
"handlers/automations.py" = ["F841"]
"handlers/chat.py" = ["F841"]
"llm/registry.py" = ["F841"]
"llm/agent_action.py" = ["E402"]
"scripts/*" = ["E402"]
"conftest.py" = ["E402"]
"tests/*" = ["F841", "E402"]    # unused vars in tests are fine
"*/tests/*" = ["F841", "E402", "E702"]
"evals/*" = ["F841", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["db", "gql", "handlers", "llm", "backends", "evals"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
