[tool.poetry]
name = "rentmate"
version = "0.1.0"
description = "Fair source property management assistant"
authors = ["RentMate Contributors"]
readme = "README.md"
packages = [
  { include = "rentmate" },
  { include = "db" },
  { include = "gql" },
  { include = "handlers" },
  { include = "backends" },
  { include = "llm" },
  { include = "demo" },
]
include = [
  { path = "pyproject.toml", format = ["sdist", "wheel"] },
  { path = "alembic.ini", format = ["sdist", "wheel"] },
  { path = "main.py", format = ["sdist", "wheel"] },
  { path = "memory_watchdog.py", format = ["sdist", "wheel"] },
  { path = "agents/**", format = ["sdist", "wheel"] },
  { path = "conftest.py", format = ["sdist", "wheel"] },
  { path = "db/migrations/**", format = ["sdist", "wheel"] },
  { path = "db/tests/**", format = ["sdist", "wheel"] },
  { path = "gql/tests/**", format = ["sdist", "wheel"] },
  { path = "gql/services/tests/**", format = ["sdist", "wheel"] },
  { path = "handlers/tests/**", format = ["sdist", "wheel"] },
  { path = "llm/tests/**", format = ["sdist", "wheel"] },
  { path = "scripts/**", format = ["sdist", "wheel"] },
  { path = "tests/**", format = ["sdist", "wheel"] },
  { path = "www/rentmate-ui/src/**", format = ["sdist", "wheel"] },
  { path = "www/rentmate-ui/public/**", format = ["sdist", "wheel"] },
  { path = "www/rentmate-ui/dist/**", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.74.8"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
strawberry-graphql = "^0.282.0"
pypdf = "^4.0"
python-multipart = "^0.0.22"
pyjwt = "^2.9"
sqlalchemy = "^2.0"
pgvector = "^0.4.1"
psycopg2-binary = "^2.9"
croniter = "^6.2.2"
bcrypt = "^5.0.0"
weasyprint = "^66.0"
grpcio = "^1.76.0"
alembic = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
memray = "^1.19.2"
testcontainers = {extras = ["postgres"], version = "^4.14.2"}
ruff = "^0.15.9"
pytest-cov = "^7.1.0"
pytest-xdist = "^3.5"

[tool.pytest.ini_options]
addopts = "--import-mode=prepend -m 'not eval'"
pythonpath = ["."]
norecursedirs = [
  "data",
  "data/db",
  "data/documents",
  ".git",
  ".venv",
  "node_modules",
  ".claude",
  ".claude/worktrees",
]
markers = [
  "eval: LLM-judge eval cases (run with -m eval)",
  "postgres: integration tests that require Docker + a running Postgres container",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "db/migrations/",
    "www/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import ordering & consolidation)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (used in compact patterns)
    "E741",   # ambiguous variable names
    "F821",   # undefined name (false positives from conditional imports)
]

[tool.ruff.lint.per-file-ignores]
"handlers/automations.py" = ["F841"]
"handlers/chat.py" = ["F841"]
"llm/registry.py" = ["F841"]
"llm/agent_action.py" = ["E402"]
"scripts/*" = ["E402"]
"conftest.py" = ["E402"]
"tests/*" = ["F841", "E402"]    # unused vars in tests are fine
"*/tests/*" = ["F841", "E402", "E702"]
"evals/*" = ["F841", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["db", "gql", "handlers", "llm", "backends", "evals"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
